# PersistentPoker-Bench

./: .env.example  .gitignore  DATASET_README.md  README.md  create_dataset.py  deploy_to_hf.py  pyproject.toml  render_html.py  render_poker_video.py  render_video.py  replay.html  requirements.txt  test_mistral.py
configs/: diabolical_survival_horse_2026-04-29.json  frontier_live.json  horse_v2_frontier_balanced_2026-04-29.json  horse_v2_frontier_claude_2026-04-30.json  horse_v2_frontier_claude_diverse_2026-04-30.json  horse_v2_frontier_mistral_2026-04-29.json  horse_v3_wall_street_claude_diverse_2026-04-30.json  horse_v3_wall_street_marathon_no_openai_40_hands.json  horse_v3_wall_street_marathon_no_openai_resume_from_hand18.json  horse_v3_wall_street_no_openai_2026-04-30.json  infernal_marathon_40_hands.json  infernal_marathon_reprise.json  modular_openrouter_template_2026-04-29.json  openai_xai_efficiency_calibrated_2026-04-29.json  openai_xai_efficiency_longrun_2026-04-29.json  openai_xai_frontier_calibrated_2026-04-29.json  openai_xai_frontier_longrun_2026-04-29.json  openai_xai_gemini_efficiency_rigorous_2026-04-29.json  openai_xai_gemini_frontier_rigorous_2026-04-29.json  openai_xai_longrun_2026-04-29.json  play_mixed.json  pool_state_hand_16.json  reprise_run.json
docs/: architecture.md  current_game_theoretic_framework.md  evaluator_spec_v1.md  hf_space_deploy.md  horse_v2_topological_rules.md  local_open_models.md  poker_authenticity_audit_v2.md  provider_strategy_2026-04-28.md  rules_v1_option_a.md  tos_safety.md
hf_space/: app.py
tests/: test_betting.py  test_budget.py  test_cards.py  test_cli.py  test_cli_local_models.py  test_configs.py  test_hand_evaluator.py  test_hand_runner.py  test_interactive.py  test_leaderboard.py  test_litellm_adapter.py  test_live_play.py  test_local_model_adapters.py  test_match_runner.py  test_memory_check.py  test_metrics.py  test_model_registry.py  test_parsing.py  (+14 more)
(+61 files in other folders)
