[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persistentpoker-bench"
version = "0.1.0"
description = "Open benchmark for advanced LLM reasoning and memory in multiplayer persistent-pool poker."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "PersistentPoker-Bench Contributors" }
]
dependencies = [
  "litellm>=1.63.0,<2.0",
  "gradio>=5.49.1,<6.0",
  "matplotlib>=3.8,<4.0",
  "Pillow>=10.0,<12.0",
  "huggingface_hub>=0.25.0,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]
llm = [
  "litellm>=1.63.0,<2.0",
]
ui = [
  "gradio>=5.49.1,<6.0",
]
video = [
  "matplotlib>=3.8,<4.0",
  "Pillow>=10.0,<12.0",
]

[project.scripts]
persistentpoker-bench = "persistentpoker_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
